thirdparty/glad/gles2/gles2.v


fn C.glad_glGetRenderbufferParameteriv(target ESFlag, pname ESFlag, params &GLint)

pub fn get_renderbuffer_parameteriv(target ESFlag, pname ESFlag, params &GLint) {
	C.glad_glGetRenderbufferParameteriv(target, pname, params)
}

fn C.glad_glGetShaderiv(shader GLuint, pname ESFlag, params &GLint)

pub fn get_shaderiv(shader GLuint, pname ESFlag, params &GLint) {
	C.glad_glGetShaderiv(shader, pname, params)
}

fn C.glad_glGetShaderInfoLog(shader GLuint, bufsize GLsizei, length &GLsizei, infolog &GLchar)

pub fn get_shader_info_log(shader GLuint, bufsize GLsizei, length &GLsizei, infolog &char) {
	C.glad_glGetShaderInfoLog(shader, bufsize, length, infolog)
}

fn C.glad_glGetShaderPrecisionFormat(shadertype ESFlag, precisiontype ESFlag, range &GLint, precision &GLint)

pub fn get_shader_precision_format(shadertype ESFlag, precisiontype ESFlag, range &GLint, precision &GLint) {
	C.glad_glGetShaderPrecisionFormat(shadertype, precisiontype, range, precision)
}

fn C.glad_glGetShaderSource(shader GLuint, bufsize GLsizei, length &GLsizei, source &GLchar)

pub fn get_shader_source(shader GLuint, bufsize GLsizei, length &GLsizei, source &GLchar) {
	C.glad_glGetShaderSource(shader, bufsize, length, source)
}

fn C.glad_glGetString(name ESFlag) &GLubyte

pub fn get_string(name ESFlag) &GLubyte {
	return C.glad_glGetString(name)
}

fn C.glad_glGetTexParameterfv(target ESFlag, pname ESFlag, params &GLfloat)

pub fn get_tex_parameterfv(target ESFlag, pname ESFlag, params &GLfloat) {
	C.glad_glGetTexParameterfv(target, pname, params)
}

fn C.glad_glGetTexParameteriv(target ESFlag, pname ESFlag, params &GLint)

pub fn get_tex_parameteriv(target ESFlag, pname ESFlag, params &GLint) {
	C.glad_glGetTexParameteriv(target, pname, params)
}

fn C.glad_glGetUniformfv(program GLuint, location GLint, params &GLfloat)

pub fn get_uniformfv(program GLuint, location GLint, params &GLfloat) {
	C.glad_glGetUniformfv(program, location, params)
}

fn C.glad_glGetUniformiv(program GLuint, location GLint, params &GLint)

pub fn get_uniformiv(program GLuint, location GLint, params &GLint) {
	C.glad_glGetUniformiv(program, location, params)
}

fn C.glad_glGetUniformLocation(program GLuint, name &GLchar) GLint

pub fn get_uniform_location(program GLuint, name &GLchar) GLint {
	return C.glad_glGetUniformLocation(program, name)
}

fn C.glad_glGetVertexAttribfv(index GLuint, pname ESFlag, params &GLfloat)

pub fn get_vertex_attribfv(index GLuint, pname ESFlag, params &GLfloat) {
	C.glad_glGetVertexAttribfv(index, pname, params)
}

fn C.glad_glGetVertexAttribiv(index GLuint, pname ESFlag, params &GLint)

pub fn get_vertex_attribiv(index GLuint, pname ESFlag, params &GLint) {
	C.glad_glGetVertexAttribiv(index, pname, params)
}

fn C.glad_glGetVertexAttribPointerv(index GLuint, pname ESFlag, pointer &voidptr)

pub fn get_vertex_attrib_pointerv(index GLuint, pname ESFlag, pointer &voidptr) {
	C.glad_glGetVertexAttribPointerv(index, pname, pointer)
}

fn C.glad_glHint(target ESFlag, mode ESFlag)

pub fn hint(target ESFlag, mode ESFlag) {
	C.glad_glHint(target, mode)
}

fn C.glad_glIsBuffer(buffer GLuint) GLboolean

pub fn is_buffer(buffer GLuint) GLboolean {
	return C.glad_glIsBuffer(buffer)
}

fn C.glad_glIsEnabled(cap ESFlag) GLboolean

pub fn is_enabled(cap ESFlag) GLboolean {
	return C.glad_glIsEnabled(cap)
}

fn C.glad_glIsFramebuffer(framebuffer GLuint) GLboolean

pub fn is_framebuffer(framebuffer GLuint) GLboolean {
	return C.glad_glIsFramebuffer(framebuffer)
}

fn C.glad_glIsProgram(program GLuint) GLboolean

pub fn is_program(program GLuint) GLboolean {
	return C.glad_glIsProgram(program)
}

fn C.glad_glIsRenderbuffer(renderbuffer GLuint) GLboolean

pub fn is_renderbuffer(renderbuffer GLuint) GLboolean {
	return C.glad_glIsRenderbuffer(renderbuffer)
}

fn C.glad_glIsShader(shader GLuint) GLboolean

pub fn is_shader(shader GLuint) GLboolean {
	return C.glad_glIsShader(shader)
}

fn C.glad_glIsTexture(texture GLuint) GLboolean

pub fn is_texture(texture GLuint) GLboolean {
	return C.glad_glIsTexture(texture)
}

fn C.glad_glLineWidth(width GLfloat)

pub fn line_width(width GLfloat) {
	C.glad_glLineWidth(width)
}

fn C.glad_glLinkProgram(program GLuint)

pub fn link_program(program GLuint) {
	C.glad_glLinkProgram(program)
}

fn C.glad_glPixelStorei(pname ESFlag, param GLint)

pub fn pixel_storei(pname ESFlag, param GLint) {
	C.glad_glPixelStorei(pname, param)
}

fn C.glad_glPolygonOffset(factor GLfloat, units GLfloat)

pub fn polygon_offset(factor GLfloat, units GLfloat) {
	C.glad_glPolygonOffset(factor, units)
}

fn C.glad_glReadPixels(x GLint, y GLint, width GLsizei, height GLsizei, format ESFlag, type_ ESFlag, pixels voidptr)

pub fn read_pixels(x GLint, y GLint, width GLsizei, height GLsizei, format ESFlag, type_ ESFlag, pixels voidptr) {
	C.glad_glReadPixels(x, y, width, height, format, type_, pixels)
}

fn C.glad_glReleaseShaderCompiler()

pub fn release_shader_compiler() {
	C.glad_glReleaseShaderCompiler()
}

fn C.glad_glRenderbufferStorage(target ESFlag, internalformat ESFlag, width GLsizei, height GLsizei)

pub fn renderbuffer_storage(target ESFlag, internalformat ESFlag, width GLsizei, height GLsizei) {
	C.glad_glRenderbufferStorage(target, internalformat, width, height)
}

fn C.glad_glSampleCoverage(value GLfloat, invert GLboolean)

pub fn sample_coverage(value GLfloat, invert GLboolean) {
	C.glad_glSampleCoverage(value, invert)
}

fn C.glad_glScissor(x GLint, y GLint, width GLsizei, height GLsizei)

pub fn scissor(x GLint, y GLint, width GLsizei, height GLsizei) {
	C.glad_glScissor(x, y, width, height)
}

fn C.glad_glShaderBinary(count GLsizei, shaders &GLuint, binaryformat ESFlag, binary voidptr, length GLsizei)

pub fn shader_binary(count GLsizei, shaders &GLuint, binaryformat ESFlag, binary voidptr, length GLsizei) {
	C.glad_glShaderBinary(count, shaders, binaryformat, binary, length)
}

fn C.glad_glShaderSource(shader GLuint, count GLsizei, string_ &&GLchar, length &GLint)

// TODO: Make glshadersource() a function not requiring a length to pass
pub fn shader_source(shader GLuint, count GLsizei, string_ &&GLchar, length GLint) {
	C.glad_glShaderSource(shader, count, string_, &length)
}

fn C.glad_glStencilFunc(func ESFlag, ref GLint, mask GLuint)

pub fn stencil_func(func ESFlag, ref GLint, mask GLuint) {
	C.glad_glStencilFunc(func, ref, mask)
}

fn C.glad_glStencilFuncSeparate(face ESFlag, func ESFlag, ref GLint, mask GLuint)

pub fn stencil_func_separate(face ESFlag, func ESFlag, ref GLint, mask GLuint) {
	C.glad_glStencilFuncSeparate(face, func, ref, mask)
}

fn C.glad_glStencilMask(mask GLuint)

pub fn stencil_mask(mask GLuint) {
	C.glad_glStencilMask(mask)
}

fn C.glad_glStencilMaskSeparate(face ESFlag, mask GLuint)

pub fn stencil_mask_separate(face ESFlag, mask GLuint) {
	C.glad_glStencilMaskSeparate(face, mask)
}

fn C.glad_glStencilOp(fail ESFlag, zfail ESFlag, zpass ESFlag)

pub fn stencil_op(fail ESFlag, zfail ESFlag, zpass ESFlag) {
	C.glad_glStencilOp(fail, zfail, zpass)
}

fn C.glad_glStencilOpSeparate(face ESFlag, sfail ESFlag, dpfail ESFlag, dppass ESFlag)

pub fn stencil_op_separate(face ESFlag, sfail ESFlag, dpfail ESFlag, dppass ESFlag) {
	C.glad_glStencilOpSeparate(face, sfail, dpfail, dppass)
}

fn C.glad_glTexImage2D(target ESFlag, level GLint, internalformat GLint, width GLsizei, height GLsizei, border GLint, format ESFlag, type_ ESFlag, pixels voidptr)

pub fn tex_image2d(target ESFlag, level GLint, internalformat GLint, width GLsizei, height GLsizei, border GLint, format ESFlag, type_ ESFlag, pixels voidptr) {
	C.glad_glTexImage2D(target, level, internalformat, width, height, border, format,
		type_, pixels)
}

fn C.glad_glTexParameterf(target ESFlag, pname ESFlag, param GLfloat)

pub fn tex_parameterf(target ESFlag, pname ESFlag, param GLfloat) {
	C.glad_glTexParameterf(target, pname, param)
}

fn C.glad_glTexParameterfv(target ESFlag, pname ESFlag, params &GLfloat)

pub fn tex_parameterfv(target ESFlag, pname ESFlag, params &GLfloat) {
	C.glad_glTexParameterfv(target, pname, params)
}

fn C.glad_glTexParameteri(target ESFlag, pname ESFlag, param GLint)

pub fn tex_parameteri(target ESFlag, pname ESFlag, param GLint) {
	C.glad_glTexParameteri(target, pname, param)
}

fn C.glad_glTexParameteriv(target ESFlag, pname ESFlag, params &GLint)

pub fn tex_parameteriv(target ESFlag, pname ESFlag, params &GLint) {
	C.glad_glTexParameteriv(target, pname, params)
}

fn C.glad_glTexSubImage2D(target ESFlag, level GLint, xoffset GLint, yoffset GLint, width GLsizei, height GLsizei, format ESFlag, type_ ESFlag, pixels voidptr)

pub fn tex_subimage2d(target ESFlag, level GLint, xoffset GLint, yoffset GLint, width GLsizei, height GLsizei, format ESFlag, type_ ESFlag, pixels voidptr) {
	C.glad_glTexSubImage2D(target, level, xoffset, yoffset, width, height, format, type_,
		pixels)
}

fn C.glad_glUniform1f(location GLint, v0 GLfloat)

pub fn uniform1f(location GLint, v0 GLfloat) {
	C.glad_glUniform1f(location, v0)
}

fn C.glad_glUniform1fv(location GLint, count GLsizei, value &GLfloat)

pub fn uniform1fv(location GLint, count GLsizei, value &GLfloat) {
	C.glad_glUniform1fv(location, count, value)
}

fn C.glad_glUniform1i(location GLint, v0 GLint)

pub fn uniform1i(location GLint, v0 GLint) {
	C.glad_glUniform1i(location, v0)
}

fn C.glad_glUniform1iv(location GLint, count GLsizei, value voidptr)

pub fn uniform1iv(location GLint, count GLsizei, value voidptr) {
	C.glad_glUniform1iv(location, count, value)
}

fn C.glad_glUniform2f(location GLint, v0 GLfloat, v1 GLfloat)

pub fn uniform2f(location GLint, v0 GLfloat, v1 GLfloat) {
	C.glad_glUniform2f(location, v0, v1)
}

fn C.glad_glUniform2fv(location GLint, count GLsizei, value &GLfloat)

pub fn uniform2fv(location GLint, count GLsizei, value &GLfloat) {
	C.glad_glUniform2fv(location, count, value)
}

fn C.glad_glUniform2i(location GLint, v0 GLint, v1 GLint)

pub fn uniform2i(location GLint, v0 GLint, v1 GLint) {
	C.glad_glUniform2i(location, v0, v1)
}

fn C.glad_glUniform2iv(location GLint, count GLsizei, value &GLint)

pub fn uniform2iv(location GLint, count GLsizei, value &GLint) {
	C.glad_glUniform2iv(location, count, value)
}

fn C.glad_glUniform3f(location GLint, v0 GLfloat, v1 GLfloat, v2 GLfloat)

pub fn uniform3f(location GLint, v0 GLfloat, v1 GLfloat, v2 GLfloat) {
	C.glad_glUniform3f(location, v0, v1, v2)
}

fn C.glad_glUniform3fv(location GLint, count GLsizei, value &GLfloat)

pub fn uniform3fv(location GLint, count GLsizei, value &GLfloat) {
	C.glad_glUniform3fv(location, count, value)
}

fn C.glad_glUniform3i(location GLint, v0 GLint, v1 GLint, v2 GLint)

pub fn uniform3i(location GLint, v0 GLint, v1 GLint, v2 GLint) {
	C.glad_glUniform3i(location, v0, v1, v2)
}

fn C.glad_glUniform3iv(location GLint, count GLsizei, value &GLint)

pub fn uniform3iv(location GLint, count GLsizei, value &GLint) {
	C.glad_glUniform3iv(location, count, value)
}

fn C.glad_glUniform4f(location GLint, v0 GLfloat, v1 GLfloat, v2 GLfloat, v3 GLfloat)

pub fn uniform4f(location GLint, v0 GLfloat, v1 GLfloat, v2 GLfloat, v3 GLfloat) {
	C.glad_glUniform4f(location, v0, v1, v2, v3)
}

fn C.glad_glUniform4fv(location GLint, count GLsizei, value &GLfloat)

pub fn uniform4fv(location GLint, count GLsizei, value &GLfloat) {
	C.glad_glUniform4fv(location, count, value)
}

fn C.glad_glUniform4i(location GLint, v0 GLint, v1 GLint, v2 GLint, v3 GLint)

pub fn uniform4i(location GLint, v0 GLint, v1 GLint, v2 GLint, v3 GLint) {
	C.glad_glUniform4i(location, v0, v1, v2, v3)
}

fn C.glad_glUniform4iv(location GLint, count GLsizei, value &GLint)

pub fn uniform4iv(location GLint, count GLsizei, value &GLint) {
	C.glad_glUniform4iv(location, count, value)
}

fn C.glad_glUniformMatrix2fv(location GLint, count GLsizei, transpose GLboolean, value &GLfloat)

pub fn uniformmatrix2fv(location GLint, count GLsizei, transpose GLboolean, value &GLfloat) {
	C.glad_glUniformMatrix2fv(location, count, transpose, value)
}
